[gd_scene load_steps=2 format=3 uid="uid://bex4b5nguujlb"]

[ext_resource type="Script" path="res://scripts/muerte.gd" id="1_rq474"]

[node name="Muerte" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_rq474")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -101.5
offset_right = -4.0
offset_bottom = -78.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.37064, 1.98)
theme_override_colors/font_color = Color(0.815686, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "GAME OVER"
horizontal_alignment = 1

[node name="BtnPlayAgain" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -37.5
offset_right = -15.0
offset_bottom = -6.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.32543, 2.42016)
theme_override_font_sizes/font_size = 14
text = "VOLVER A JUGAR"

[node name="BtnMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = 64.5
offset_right = -11.0
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.32543, 2.42016)
theme_override_colors/font_color = Color(0.737255, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "SALIR"

[connection signal="pressed" from="BtnPlayAgain" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BtnMenu" to="." method="_on_button_2_pressed"]
